# moveitAPI

./: .gitignore  DESCRIPTION  LICENSE  README.md
Python/: LICENSE  pyproject.toml
Python/src/moveitAPI/: moveit.py
Python/src/moveitAPI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
R/: moveit.R
man/: authMoveIt.Rd  availableFiles.Rd  availableFolders.Rd  readMoveItFile.Rd  uploadMoveItFile.Rd
