[project]
name = "moveitAPI"
version = "0.0.1"
authors = [
  { name="Daniel Andrus", email="Daniel.Andrus@AlleghenyCounty.us" },
]
description = "Package to access MoveIT server through API calls"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Topic :: Software Development :: Bug Tracking"
]

[project.urls]
Homepage = "https://github.com/Allegheny-CountyStats/moveitAPI/"
Issues = "https://github.com/Allegheny-CountyStats/moveitAPI/issues"